--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
         </a>
 
         <!-- Add more custom links here -->
-        <a class="link" href="#" target="_blank">
-            Project 1
+        <a class="link" href="johart2030.github.io/wav-viewer.html" target="_blank">
+            .WAV Player
         </a>
 
         <a class="link" href="#" target="_blank">
