Change title and heading to '.WAV Player'

--- a/wav-viewer.html
+++ b/wav-viewer.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>25 Sound Player</title>
+<title>.WAV Player</title>
 
 <style>
     :root{
@@ -111,7 +111,7 @@
 
 <body>
 
-<h1>25 Sound Buttons</h1>
+<h1>.WAV Player</h1>
 
 <p>
     Click <strong>"Load folder"</strong> to select the folder containing this page,  
