Update wav-viewer.html background color

--- a/wav-viewer.html
+++ b/wav-viewer.html
@@ -15,7 +15,7 @@
 
     body{
         font-family:system-ui,Segoe UI,Roboto,sans-serif;
-        background:linear-gradient(135deg, #4d8dff, #a8d4ff);
+        background:linear-gradient(135deg, #08285f, #0663c0a5);
         margin:0;
         padding:25px;
         display:flex;
