Update index.html .WAV Player

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </a>
 
         <!-- Add more custom links here -->
-        <a class="link" href="https://johart2030.github.io/wav-viewer.html" target="_blank">
+        <a class="link" href="https://johart2030.github.io/wav-player.html" target="_blank">
             .WAV Player
         </a>
 
