--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>johart2030 | Link Hub</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32-index-html.png">
+    <link rel="icon" type="image/x-icon" href="favicon-index-html.ico">
+
 
     <style>
         body {
