--- a/wav-player.html
+++ b/wav-player.html
@@ -4,6 +4,8 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>.WAV Player</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32-wav-player-html.png">
+    <link rel="icon" type="image/x-icon" href="favicon-wav-player-html.ico">
 
 <style>
     :root{
