--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </a>
 
         <!-- Add more custom links here -->
-        <a class="link" href="https://johart2030.github.io/wav-player.html" target="_blank">
+        <a class="link" href="https://johart2030.github.io/wav-player/wav-player.html" target="_blank">
             .WAV Player
         </a>
 
