Update wav-player.html so that the home button works

--- a/wav-player/wav-player.html
+++ b/wav-player/wav-player.html
@@ -285,7 +285,7 @@ loadFolderBtn.addEventListener('click', async ()=>{
 // ===== Home button functionality =====
 const homeBtn = document.getElementById('homeBtn');
 homeBtn.addEventListener('click', () => {
-    window.location.href = 'index.html'; // replace with your main page URL
+    window.location.href = 'https://johart2030.github.io'; // replace with your main page URL
 });
 </script>
 
