--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
             .WAV Player
         </a>
 
-        <a class="link" href="#" target="_blank">
-            Project 2
+        <a class="link" href="https://johart2030.github.io/project-ideas/project-ideas.html" target="_blank">
+            Project Ideas
         </a>
 
         <a class="link" href="#" target="_blank">
