--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
             Project Ideas
         </a>
 
+        <a class="link" href="https://johart2030.github.io/README.md" target="_blank">
+            ReadMe
+        </a>
+
         <a class="link" href="#" target="_blank">
             Website / Portfolio
         </a>
