--- a/project-ideas/project-ideas.html
+++ b/project-ideas/project-ideas.html
@@ -105,7 +105,7 @@
     padding: 10px 14px;
     border-radius: 10px;
     border: 1px solid #888; /* fallback if var(--border) isn't defined */
-    background: #fff;
+    background: #010a30;
     cursor: pointer;
     font-weight: 600;
     box-shadow: 0 1px 4px rgba(0,0,0,0.2);
