Updated index.html to have some links open in new tabs and others won't

--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
         </a>
 
         <!-- Add more custom links here -->
-        <a class="link" href="https://johart2030.github.io/wav-player/wav-player.html" target="_blank">
+        <a class="link" href="https://johart2030.github.io/wav-player/wav-player.html" target="_self">
             .WAV Player
         </a>
 
-        <a class="link" href="https://johart2030.github.io/project-ideas/project-ideas.html" target="_blank">
+        <a class="link" href="https://johart2030.github.io/project-ideas/project-ideas.html" target="_self">
             Project Ideas
         </a>
 
