--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
         <a class="link" href="https://johart2030.github.io/project-ideas/project-ideas.html" target="_self">
             Project Ideas
         </a>
+        
+        <a class="link" href="https://johart2030.github.io/peg-game/peg-game.html" target="_self">
+            .WAV Player
+        </a>
 
         <a class="link" href="https://johart2030.github.io/README.md" target="_blank">
             ReadMe
