Update peg-game.html to have how to play the game

--- a/peg-game.html
+++ b/peg-game.html
@@ -181,6 +181,55 @@
     color:var(--peg);
   }
 
+/* Info Section */
+.peg-info {
+    max-width: 700px;
+    margin: 2rem auto;
+    padding: 1.5rem;
+    background: rgba(255, 255, 255, 0.85);
+    backdrop-filter: blur(6px);
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+    font-family: system-ui, sans-serif;
+}
+
+.peg-info h2 {
+    font-size: 1.8rem;
+    margin-bottom: 1rem;
+    text-align: center;
+}
+
+.peg-info h3 {
+    margin-top: 1.5rem;
+    margin-bottom: 0.5rem;
+    font-size: 1.25rem;
+}
+
+.peg-info p {
+    line-height: 1.6;
+    font-size: 1rem;
+}
+
+.peg-info ul {
+    padding-left: 1.25rem;
+    line-height: 1.6;
+}
+
+.peg-info-credit {
+    margin-top: 2rem;
+    text-align: center;
+    font-size: 0.95rem;
+}
+
+.peg-info-credit a {
+    color: #0077ff;
+    text-decoration: none;
+}
+
+.peg-info-credit a:hover {
+    text-decoration: underline;
+}
+
 </style>
 </head>
 
@@ -214,6 +263,36 @@
 
 </div>
 
+<section class="peg-info">
+    <h2>🧩 About the Triangle Peg Game</h2>
+    <p>
+        This classic peg-jumping puzzle challenges you to reduce the board to
+        just <strong>one peg</strong>. The board starts with 15 pegs arranged
+        in a triangle, and you can choose where the starting empty hole is.
+    </p>
+
+    <h3>How to Play</h3>
+    <ul>
+        <li>Tap any peg to select it.</li>
+        <li>Tap a valid destination hole to jump over one peg into an empty hole.</li>
+        <li>The jumped peg is removed from the board.</li>
+        <li>Continue making jumps until no moves remain.</li>
+        <li>Your goal: finish with <strong>just one peg</strong> left.</li>
+    </ul>
+
+    <h3>Game Features</h3>
+    <ul>
+        <li>Fully responsive — works great on phones and tablets.</li>
+        <li>Choose your starting empty hole.</li>
+        <li>Undo last move.</li>
+        <li>Reset game instantly.</li>
+    </ul>
+
+    <p class="peg-info-credit">
+        Created by <a href="https://johart2030.github.io" target="_blank">johart2030</a>
+    </p>
+    
+</section>
 
 <script>
 /* ============ GAME LOGIC ============ */
