added peg-game.html to it's own folder

--- a/peg-game/peg-game.html
+++ b/peg-game/peg-game.html
@@ -25,11 +25,13 @@
     color:var(--peg);
   }
 
-  body{
-    display:flex;
-    justify-content:center;
-    padding:30px 12px 60px;
-  }
+body{
+    display: flex;
+    flex-direction: column; /* ← Forces vertical stacking */
+    align-items: center;    /* ← Keeps everything centered */
+    padding: 30px 12px 60px;
+}
+
 
   .container{
     width:950px;
