renamed the peg-game.html link to "Peg Game"

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </a>
         
         <a class="link" href="https://johart2030.github.io/peg-game/peg-game.html" target="_self">
-            .WAV Player
+            Peg Game
         </a>
 
         <a class="link" href="https://johart2030.github.io/README.md" target="_blank">
